--- a/test/fixtures/test_model.yml
+++ b/test/fixtures/test_model.yml
@@ -3,9 +3,17 @@ grandchild_model:
   child_model_attr: Annapolis
   grandchild_model_attr: black
 
+grandchild_model_multiple_find:
+  parent_model_attr: Todd
+  parent_model_other_attr: Angie
+  child_model_attr: Atlanta
+  child_model_other_attr: Nashville
+  grandchild_model_attr: orange
+  grandchild_model_other_attr: orange
+
 grandchild_model_update:
   parent_model_attr: Todd
-  child_model_attr: Atalanta
+  child_model_attr: Atlanta
   grandchild_model_attr: green
 
 grandchild_ancestor_model:
