cotinued work on has_ancestor find extensions

--- a/test/fixtures/test_model.yml
+++ b/test/fixtures/test_model.yml
@@ -1,52 +1,52 @@
 grandchild_model:
   parent_model_string: Troy
-  child_model_string: Annapolis
-  grandchild_model_string: black
-  child_model_integer: 2
   parent_model_integer: 5
+  child_model_string: Annapolis
+  child_model_integer: 2
+  grandchild_model_string: black
   grandchild_model_integer: 3
 
 grandchild_model_find_1:
   parent_model_string: Troy
-  child_model_string: Annapolis
-  grandchild_model_string: black
-  child_model_integer: 2
   parent_model_integer: 5
+  child_model_string: Annapolis
+  child_model_integer: 2
+  grandchild_model_string: black
   grandchild_model_integer: 3
 
 grandchild_model_find_2:
   parent_model_string: Troy
+  parent_model_integer: 5
   child_model_string: Annapolis
+  child_model_integer: 2
   grandchild_model_string: black
-  child_model_integer: 12
-  parent_model_integer: 15
   grandchild_model_integer: 3
 
 grandchild_model_find_3:
   parent_model_string: Todd
-  child_model_string: Atlanta
-  grandchild_model_string: orange
-  child_model_integer: 6
   parent_model_integer: 16
+  child_model_string: Atlanta
+  child_model_integer: 6
+  grandchild_model_string: orange
   grandchild_model_integer: 26
 
 child_grandchild_model_find_1:
   parent_model_string: Troy
+  parent_model_integer: 5
   child_model_string: Annapolis
   child_model_integer: 2
-  parent_model_integer: 5
 
 child_grandchild_model_find_2:
   parent_model_string: Troy
+  parent_model_integer: 5
   child_model_string: Annapolis
-  child_model_integer: 12
-  parent_model_integer: 15
+  child_model_integer: 2
 
 child_grandchild_model_find_3:
   parent_model_string: Todd
+  parent_model_integer: 16
   child_model_string: Atlanta
   child_model_integer: 6
-  parent_model_integer: 16
 
 parent_grandchild_model_find_1:
   parent_model_string: Troy
@@ -54,7 +54,7 @@ parent_grandchild_model_find_1:
 
 parent_grandchild_model_find_2:
   parent_model_string: Troy
-  parent_model_integer: 15
+  parent_model_integer: 5
 
 parent_grandchild_model_find_3:
   parent_model_string: Todd
@@ -74,9 +74,9 @@ grandchild_ancestor_ancestor_model:
 
 child_model:
   parent_model_string: Billy
+  parent_model_integer: 5
   child_model_string: Manchester
   child_model_integer: 2
-  parent_model_integer: 5
 
 child_model_update:
   parent_model_string: Charelene
@@ -84,21 +84,21 @@ child_model_update:
 
 child_model_find_1:
   parent_model_string: Billy
+  parent_model_integer: 5
   child_model_string: Manchester
   child_model_integer: 2
-  parent_model_integer: 5
 
 child_model_find_2:
   parent_model_string: Billy
-  child_model_string: MtJuliet
+  parent_model_integer: 5
+  child_model_string: Manchester
   child_model_integer: 2
-  parent_model_integer: 15
-
+  
 child_model_find_3:
   parent_model_string: Charlene
+  parent_model_integer: 15
   child_model_string: Hendersonville
   child_model_integer: 12
-  parent_model_integer: 15
 
 parent_child_model_find_1:
   parent_model_string: Billy
@@ -106,7 +106,7 @@ parent_child_model_find_1:
 
 parent_child_model_find_2:
   parent_model_string: Billy
-  parent_model_integer: 15
+  parent_model_integer: 5
 
 parent_child_model_find_3:
   parent_model_string: Charlene
