continued work on enhanced finders

--- a/test/fixtures/test_model.yml
+++ b/test/fixtures/test_model.yml
@@ -1,4 +1,4 @@
-grandchild_model:
+grandchild_model_1:
   parent_model_string: Troy
   parent_model_integer: 5
   child_model_string: Annapolis
@@ -6,7 +6,7 @@ grandchild_model:
   grandchild_model_string: black
   grandchild_model_integer: 3
 
-grandchild_model_find_1:
+grandchild_model_2:
   parent_model_string: Troy
   parent_model_integer: 5
   child_model_string: Annapolis
@@ -14,15 +14,7 @@ grandchild_model_find_1:
   grandchild_model_string: black
   grandchild_model_integer: 3
 
-grandchild_model_find_2:
-  parent_model_string: Troy
-  parent_model_integer: 5
-  child_model_string: Annapolis
-  child_model_integer: 2
-  grandchild_model_string: black
-  grandchild_model_integer: 3
-
-grandchild_model_find_3:
+grandchild_model_3:
   parent_model_string: Todd
   parent_model_integer: 16
   child_model_string: Atlanta
@@ -30,107 +22,75 @@ grandchild_model_find_3:
   grandchild_model_string: orange
   grandchild_model_integer: 26
 
-child_grandchild_model_find_1:
+child_grandchild_model_1:
   parent_model_string: Troy
   parent_model_integer: 5
   child_model_string: Annapolis
   child_model_integer: 2
 
-child_grandchild_model_find_2:
+child_grandchild_model_2:
   parent_model_string: Troy
   parent_model_integer: 5
   child_model_string: Annapolis
   child_model_integer: 2
 
-child_grandchild_model_find_3:
+child_grandchild_model_3:
   parent_model_string: Todd
   parent_model_integer: 16
   child_model_string: Atlanta
   child_model_integer: 6
 
-parent_grandchild_model_find_1:
+parent_grandchild_model_1:
   parent_model_string: Troy
   parent_model_integer: 5
 
-parent_grandchild_model_find_2:
+parent_grandchild_model_2:
   parent_model_string: Troy
   parent_model_integer: 5
 
-parent_grandchild_model_find_3:
+parent_grandchild_model_3:
   parent_model_string: Todd
   parent_model_integer: 16
 
-grandchild_model_update:
-  parent_model_string: Todd
-  child_model_string: Atlanta
-  grandchild_model_string: green
-
-grandchild_ancestor_model:
-  parent_model_string: Troy
-  child_model_string: Annapolis
-
-grandchild_ancestor_ancestor_model:
-  parent_model_string: Troy
-
-child_model:
+child_model_1:
   parent_model_string: Billy
   parent_model_integer: 5
   child_model_string: Manchester
   child_model_integer: 2
 
-child_model_update:
-  parent_model_string: Charelene
-  child_model_string: Hendersonville
-
-child_model_find_1:
-  parent_model_string: Billy
-  parent_model_integer: 5
-  child_model_string: Manchester
-  child_model_integer: 2
-
-child_model_find_2:
+child_model_2:
   parent_model_string: Billy
   parent_model_integer: 5
   child_model_string: Manchester
   child_model_integer: 2
   
-child_model_find_3:
+child_model_3:
   parent_model_string: Charlene
   parent_model_integer: 15
   child_model_string: Hendersonville
   child_model_integer: 12
 
-parent_child_model_find_1:
+parent_child_model_1:
   parent_model_string: Billy
   parent_model_integer: 5
 
-parent_child_model_find_2:
+parent_child_model_2:
   parent_model_string: Billy
   parent_model_integer: 5
 
-parent_child_model_find_3:
+parent_child_model_3:
   parent_model_string: Charlene
   parent_model_integer: 15
 
-child_ancestor_model:
-  parent_model_string: Billy
-    
-parent_model:
-  parent_model_string: Guy
-
-parent_model_update:
-  parent_model_string: Winfred
-  parent_model_integer: 5
-
-parent_model_find_1:
+parent_model_1:
   parent_model_string: Guy
   parent_model_integer: 5
 
-parent_model_find_2:
+parent_model_2:
   parent_model_string: Guy
   parent_model_integer: 5
 
-parent_model_find_3:
+parent_model_3:
   parent_model_string: Winfred
   parent_model_integer: 15
 
